--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "tmi.js": "^1.5.0"
-  },
-  "devDependencies": {
+    "tmi.js": "^1.5.0",
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
