--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "nodemon --exec babel-node src/index.js",
     "build": "babel src -d dist",
     "start": "npm run build && node dist/index.js"
@@ -15,9 +16,12 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
     "tmi.js": "^1.5.0"
   }
 }
